--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Sahitha Muthayala</title>
+    <title>Sahitha Muthyala</title>
 	<link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
 	<link rel="icon" href="favicon.ico" type="image/x-icon">
     <link href="https://fonts.googleapis.com/css?family=Lato:300,400,700,900" rel="stylesheet">
@@ -87,7 +87,7 @@
                 </div>
                 <div class="col-md-8">
                     <p>
-                        Hi! I'm Sahitha Muthayala, a student based in Brisbane.
+                        Hi! I'm Sahitha Muthyala, a student based in Brisbane.
                     </p>
                     <br>
                     <p align="justify">
@@ -267,7 +267,7 @@ Enabled users to compare financial performance effortlessly, whether it be acros
             <div class="row">
                 <div class="col-sm-5 copyright">
                     <p>
-                        Copyright &copy; 2024 Sahitha Muthayala
+                        Copyright &copy; 2024 Sahitha Muthyala
                     </p>
                 </div>
                 <div class="col-sm-2 top">
